feat: enhance UI components, voting matrix, security configurations, and user services